--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@blowstack/ckeditor5-full-free-build": "^23.1.0",
+    "@nuxt/components": "^1.2.2",
+    "@nuxtjs/router": "^1.5.0",
+    "axios": "^0.21.0",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "vue-chartjs": "^3.5.1",
+    "vue-picture-swipe": "^2.0.2",
+    "xss": "^1.0.8"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2"
