--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@blowstack/ckeditor5-full-free-build": "^23.1.0",
     "@nuxt/components": "^1.2.2",
+    "@nuxtjs/auth": "^4.9.1",
+    "@nuxtjs/axios": "^5.12.4",
     "@nuxtjs/router": "^1.5.0",
     "axios": "^0.21.0",
     "chart.js": "^2.9.4",
+    "cookieparser": "^0.1.0",
     "core-js": "^3.6.5",
+    "js-cookie": "^2.2.1",
     "nuxt": "^2.14.6",
     "vue-chartjs": "^3.5.1",
     "vue-picture-swipe": "^2.0.2",
