--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@blowstack/ckeditor5-full-free-build": "^23.1.0",
     "@nuxt/components": "^1.2.2",
-    "@nuxtjs/auth": "^4.9.1",
+    "@nuxtjs/auth-next": "^5.0.0-1608461079.ae1e5db",
     "@nuxtjs/axios": "^5.12.4",
     "@nuxtjs/router": "^1.5.0",
     "axios": "^0.21.0",
