--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,18 @@
 version: '3'
+
 services:
   skauttrebic-frontend:
     build:
       context: ./client
       dockerfile: Dockerfile
-    working_dir: /app
     volumes:
-      - ~/.composer-docker/cache:/root/.composer/cache:delegated
-      - ./:/app:cached
+      - ./client:/app
+      - /app/node_modules
+      - /app/.nuxt
     stdin_open: true
     tty: true
     environment:
-    - HOST=0.0.0.0
-    - CHOKIDAR_USEPOLLING=true
+      - HOST=0.0.0.0
+      - CHOKIDAR_USEPOLLING=true
     ports:
-    - 3000:3000
+      - 3000:3000
