edit docker-compose https://stackoverflow.com/questions/65570226/docker-compose-server-unreachable/65570470?noredirect=1#comment115930798_65570470

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  skauttrebic-frontend:
+  frontend:
     build:
       context: ./client
       dockerfile: Dockerfile
@@ -16,3 +16,21 @@ services:
       - CHOKIDAR_USEPOLLING=true
     ports:
       - 3000:3000
+    depends_on:
+      - "backend"
+
+  backend:
+    build:
+      context: ./api
+      dockerfile: Dockerfile
+    volumes:
+      - ./api:/app
+      - /app/node_modules
+    stdin_open: true
+    tty: true
+    environment:
+      - HOST=0.0.0.0
+      - CHOKIDAR_USEPOLLING=true
+    ports:
+      - 1337:1337
+    
