--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@nuxt/components": "^1.2.2",
     "@nuxtjs/auth-next": "^5.0.0-1608461079.ae1e5db",
     "@nuxtjs/axios": "^5.12.4",
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/router": "^1.5.0",
     "axios": "^0.21.0",
     "chart.js": "^2.9.4",
